cabal-version:      2.4
name:               msg
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             José Manuel Calderón Trilla
maintainer:         hackage@jmct.cc

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common depends
    build-depends:    base ^>=4.16.3.0
                    , bytestring
                    , containers
                    , hslua
                    , mustache
                    , pandoc
                    , path
                    , text

library
    import: depends
    hs-source-dirs:   src
    exposed-modules: LuaConfig.Dict
                     Data.Site
    default-language: Haskell2010

executable msg
    import: depends
    build-depends:   msg
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
    default-language: Haskell2010
